# translator_project

./: README.md  pyproject.toml
django_translator/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
main/templates/main/: index.html
