[tool.poetry]
name = "translator-project"
version = "0.1.0"
description = ""
authors = ["Oskar Agzigitov <110802094+AgzigitovOskar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
googletrans = "3.1.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
